# cpp-tiff

./: CMakeLists.txt  README.md
benchmarks/: README.md  benchread.cpp  benchwrite.cpp  compare.py  run_bench.sh  run_write_bench.sh
dependencies/: README.md
dependencies/tiff-4.6.0/cmake/: ZSTDCodec.cmake
mexSrc/: compile_getImageSizeMex.m  compile_parallelReadTiff.m  compile_parallelWriteTiff.m  getimagesizemex.cpp  parallelreadtiffmex.cpp  parallelwritetiffmex.cpp  tests.m
parallelReadTiff/: README.md
parallelReadTiff/cSrc/: CMakeLists.txt  main.c  parallelReadTiff.h
parallelReadTiff/parallelReadTiffMex/: parallelReadTiff.c  parallelReadTiff.mexa64
parallelWriteTiff/parallelWriteTiffMex/: parallelWriteTiff.c  parallelWriteTiff.mexa64
python/: cpptiff.cpp  pyproject.toml  setup.py
python/cpptiff/: __init__.py  cpptiffwrappers.py
python/tests/: test_python.py
src/: helperfunctions.cpp  helperfunctions.h  lzwencode.cpp  parallelreadtiff.cpp  parallelreadtiff.h  parallelwritetiff.cpp  parallelwritetiff.h
tests/: roundtrip.cpp  test_matlab.m
